Fix drag and drop flickering

--- a/app/renderer-process/scss/file-drag-overlay.scss
+++ b/app/renderer-process/scss/file-drag-overlay.scss
@@ -15,6 +15,9 @@
     &.file-dragging {
         opacity: 1;
         z-index:9999;
+        * {
+            pointer-events: none;
+        }
     }
 }
 
